welcome.lessons.welcome.bat.bool2.SortaSum.scala.error
sortaSum:4: error: type mismatch;
 found   : Unit
 required: Int
    if (x<=19) {
    ^